test/sema/positive/trait_def_after_usage.impala
fn myf[A:T](x : A) -> A {
   x
}
trait T {}
