test/sema/negative/lazy_analysis1.impala
fn f[A: T](x:A) -> A {
   x
}
trait T {
      fn tf(A) -> A;
}
